// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 1`] = `
Object {
  "allowQuestions": false,
  "endTime": Any<String>,
  "id": 2,
  "isDisabled": false,
  "isOpen": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 2",
  "staffList": Array [],
  "startTime": Any<String>,
}
`;

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 2`] = `
Object {
  "allowQuestions": false,
  "endTime": Any<String>,
  "id": 3,
  "isDisabled": false,
  "isOpen": true,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 3",
  "staffList": Array [
    Object {
      "defaultMessage": null,
      "email": "user@neu.edu",
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "insights": Array [
        "TotalStudents",
        "TotalQuestionsAsked",
        "MedianWaitTime",
        "QuestionTypeBreakdown",
        "MostActiveStudents",
        "QuestionToStudentRatio",
        "MedianHelpingTime",
      ],
      "lastName": "Person",
      "name": "User Person",
      "photoURL": null,
    },
  ],
  "startTime": Any<String>,
}
`;

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 3`] = `
Object {
  "allowQuestions": false,
  "endTime": Any<String>,
  "id": 4,
  "isDisabled": false,
  "isOpen": true,
  "isProfessorQueue": true,
  "notes": null,
  "queueSize": 0,
  "room": "room 4",
  "staffList": Array [
    Object {
      "defaultMessage": null,
      "email": "user@neu.edu",
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "insights": Array [
        "TotalStudents",
        "TotalQuestionsAsked",
        "MedianWaitTime",
        "QuestionTypeBreakdown",
        "MostActiveStudents",
        "QuestionToStudentRatio",
        "MedianHelpingTime",
      ],
      "lastName": "Person",
      "name": "User Person",
      "photoURL": null,
    },
  ],
  "startTime": Any<String>,
}
`;

exports[`Course Integration GET /courses/:id gets office hours no queues, since no queue is happening right now 1`] = `
Object {
  "coordinator_email": null,
  "enabled": true,
  "heatmap": false,
  "id": 1,
  "name": "CS 2500",
  "officeHours": Array [
    Object {
      "endTime": "2020-05-20T15:30:00.000Z",
      "id": 1,
      "startTime": "2020-05-20T14:00:00.000Z",
      "title": "Alex & Stanley",
    },
  ],
  "pending": null,
  "queues": Array [],
  "selfEnroll": false,
  "timezone": "America/New_York",
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled and not prof queues (TA) 1`] = `
Object {
  "allowQuestions": false,
  "endTime": Any<String>,
  "id": 2,
  "isDisabled": false,
  "isOpen": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 2",
  "staffList": Array [],
  "startTime": Any<String>,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled and not prof queues (TA) 2`] = `
Object {
  "allowQuestions": false,
  "endTime": Any<String>,
  "id": 3,
  "isDisabled": false,
  "isOpen": true,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 3",
  "staffList": Array [
    Object {
      "defaultMessage": null,
      "email": "user@neu.edu",
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "insights": Array [
        "TotalStudents",
        "TotalQuestionsAsked",
        "MedianWaitTime",
        "QuestionTypeBreakdown",
        "MostActiveStudents",
        "QuestionToStudentRatio",
        "MedianHelpingTime",
      ],
      "lastName": "Person",
      "name": "User Person",
      "photoURL": null,
    },
  ],
  "startTime": Any<String>,
}
`;

exports[`Course Integration POST /courses/:id/ta_location/:room checks a TA into an existing queue 1`] = `
Object {
  "allowQuestions": true,
  "id": 1,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "room": "Online",
  "staffList": Array [
    Object {
      "defaultMessage": null,
      "email": "user@neu.edu",
      "firstName": "User",
      "id": 1,
      "includeDefaultMessage": true,
      "insights": Array [
        "TotalStudents",
        "TotalQuestionsAsked",
        "MedianWaitTime",
        "QuestionTypeBreakdown",
        "MostActiveStudents",
        "QuestionToStudentRatio",
        "MedianHelpingTime",
      ],
      "lastName": "Person",
      "name": "User Person",
      "photoURL": null,
    },
  ],
}
`;
